--- a/world.css
+++ b/world.css
@@ -1,1 +1,46 @@
 /* Add your own styles */
+body{
+    margin:0px;
+    background-color: #979299;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+h1{
+    color: #f7e70a;
+    text-align: center;
+    font-size: 60px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 40px;
+}
+
+header {
+    background-color: #5f0f84;
+}
+
+main{
+    margin: 50px;
+}
+
+
+button{
+    height: 40px;
+    width: 100px;
+    border-radius: 5px;
+    margin-left: 10px;
+    background-color: #f7e70a;
+    border-color: #d4c70a;
+
+}
+
+input{
+    height: 40px;
+    width: 300px;
+    border-radius: 5px;
+    border: 3px solid #5f0f84;
+}
+
+label{
+    font-weight: bold;
+    color: #5f0f84;
+}
