--- a/world.css
+++ b/world.css
@@ -5,6 +5,7 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+/*Header*/
 h1{
     color: #f7e70a;
     text-align: center;
@@ -18,10 +19,16 @@ header {
     background-color: #5f0f84;
 }
 
-main{
-    margin: 50px;
-}
 
+/*Main*/
+main{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 
 button{
     height: 40px;
@@ -30,12 +37,12 @@ button{
     margin-left: 10px;
     background-color: #f7e70a;
     border-color: #d4c70a;
-
+    color: #5f0f84;
 }
 
 input{
     height: 40px;
-    width: 300px;
+    width: 400px;
     border-radius: 5px;
     border: 3px solid #5f0f84;
 }
@@ -43,4 +50,38 @@ input{
 label{
     font-weight: bold;
     color: #5f0f84;
+}
+
+
+/*Table*/
+table{
+    margin-top: 40px;
+    color: #5f0f84;
+}
+
+table, th, td {
+    border: 2px solid rgb(109, 108, 108);
+    border-collapse: collapse;
+}
+
+
+th{
+    text-align: center;
+    padding: 10px;
+}
+
+td{
+    text-align: left;
+    padding-left: 15px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+tr{
+    background-color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #979299;
 }
